--- a/package.json
+++ b/package.json
@@ -52,16 +52,16 @@
     "@jamesacarr/eslint-formatter-github-actions": "^0.2.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/jest": "^29.5.12",
-    "@types/react": "19.1.1",
-    "nitrogen": "0.31.10",
-    "react": "19.1.1",
-    "react-native": "0.82",
-    "react-native-builder-bob": "^0.37.0",
-    "react-native-nitro-modules": "0.31.10",
+    "@types/jest": "^30.0.0",
+    "@types/react": "19.2.7",
     "conventional-changelog-conventionalcommits": "^9.1.0",
-    "semantic-release": "^24.2.9",
-    "typescript": "^5.8.3"
+    "nitrogen": "0.31.10",
+    "react": "19.2.0",
+    "react-native": "~0.82.1",
+    "react-native-builder-bob": "^0.40.16",
+    "react-native-nitro-modules": "0.31.10",
+    "semantic-release": "^25.0.2",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "react": "*",
