--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -46,12 +46,23 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  build-3rdparty:
+    uses: ./.github/workflows/build-3rdparty.yml
+
   build:
     name: Build iOS Example App
+    needs: build-3rdparty
     runs-on: macOS-15
     steps:
       - uses: actions/checkout@v6
       - uses: oven-sh/setup-bun@v2
+
+      - name: Download 3rdparty artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: 3rdparty-output
+          path: 3rdparty/output
+
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
