--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "clean": "git clean -dfX",
     "release": "semantic-release",
     "build": "pnpm run typecheck && bob build",
-    "codegen": "nitrogen --logLevel=\"debug\" && pnpm run build && node post-script.js"
+    "codegen": "nitrogen --logLevel=\"debug\" && pnpm run build && node post-script.js",
+    "lint": "pnpm run lint:cpp",
+    "lint:cpp": "find cpp -path cpp/__tests__/build -prune -o \\( -name \"*.cpp\" -o -name \"*.h\" -o -name \"*.hpp\" \\) -type f -print0 | xargs -0 clang-format -n --Werror -style=file",
+    "outtt": "which clang-format"
   },
   "keywords": [
     "react-native",
@@ -54,6 +57,7 @@
     "@semantic-release/git": "^10.0.1",
     "@types/jest": "^30.0.0",
     "@types/react": "19.2.7",
+    "clang-format-node": "^2.0.5",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "nitrogen": "0.31.10",
     "react": "19.2.0",
