--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  build-3rdparty:
+    uses: ./.github/workflows/build-3rdparty.yml
+
   release:
     name: Release
+    needs: build-3rdparty
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -24,6 +28,15 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      - name: Download 3rdparty artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: 3rdparty-output
+          path: 3rdparty/output
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - name: Setup Bun.js
         uses: oven-sh/setup-bun@v2
         with:
